Make sections wider to avoid wrap

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
   font-family: Verdana, Geneva, sans-serif;
   font-size: 10pt;
-  max-width: 480px;
+  max-width: 500px;
   background: #111;
   color: #ddd;
 } 
